# 1dSchrodinger

./: .gitignore  README.md  log.org  pyproject.toml
examples/: .harmonic_oscillator.py.~undo-tree~  bracket_nodes.py  count_nodes.py  count_nodes_debug.py  harmonic_oscillator.py  harmonic_oscillator2.py  ho_shooting.py  numerov.py
src/schrodinger/: .integrator.py.~undo-tree~  .shooting.py.~undo-tree~  1dschr  __init__.py  ho_shooting.py  integrator.py  potentials.py  shooting.py
tests/: test_harmonic_oscillator.py  test_shooting.py
